# passget

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/cli/: cli.cpp  cli.h
src/gui/: gui.cpp  gui.h
src/manager/: manager.cpp  manager.h
src/utils/: utils.h
